# docling_service

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: api.md  architecture.md  changelog.md  development.md  planning.md
src/docling_service/: __init__.py  app.py  docling_pipeline.py  llm_enhance.py
